--- a/CalendarApp/BookingRoom/Web.config
+++ b/CalendarApp/BookingRoom/Web.config
@@ -4,11 +4,15 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+
   <appSettings>
     <add key="emailService" value="1022042832033-glqi5vrlgh0gtpcdg620nkrg4hs65835@developer.gserviceaccount.com"/>
     <add key ="password" value ="notasecret"/>
     <add key ="applicationName" value ="CalendarApp"/>
+    <add key ="LoggerName" value="ExceptionLogger"/>
   </appSettings>
+
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
