Creating Simple Nunit integration tests

--- a/CalendarApp/BookingRoom/Web.config
+++ b/CalendarApp/BookingRoom/Web.config
@@ -6,6 +6,9 @@
 <configuration>
 
   <appSettings>
+    <add key="emailService" value="1022042832033-glqi5vrlgh0gtpcdg620nkrg4hs65835@developer.gserviceaccount.com"/>
+    <add key ="password" value ="notasecret"/>
+    <add key ="applicationName" value ="CalendarApp"/>
     <add key ="LoggerName" value="ExceptionLogger"/>
     <add key ="MapPath" value="~/App_Data/Token.p12"/>
   </appSettings>
