--- a/CalendarApp/NUnitTestProject/NUnitTestProject.csproj
+++ b/CalendarApp/NUnitTestProject/NUnitTestProject.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Dependency\UnityRegistrationModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PostEventTest.cs" />
+    <Compile Include="UpdateEventTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
