--- a/CalendarApp/NUnitTestProject/app.config
+++ b/CalendarApp/NUnitTestProject/app.config
@@ -9,6 +9,7 @@
     <add key="applicationName" value="CalendarApp" />
     <add key="LoggerName" value="ExceptionLogger" />
     <add key="MapPath" value="\Token.p12" />
+    <add key ="TestCalendar" value ="u2uabvchhqr9u283f0top25v40@group.calendar.google.com"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
