Creating checking for events conflicts
Updated

DeletePass

--- a/CalendarApp/BookingRoom/Web.config
+++ b/CalendarApp/BookingRoom/Web.config
@@ -8,6 +8,7 @@
   <appSettings>
     <add key ="LoggerName" value="ExceptionLogger"/>
     <add key ="MapPath" value="~/App_Data/Token.p12"/>
+    <add key="MaxResults" value="2500"/>
   </appSettings>
 
   
