--- a/CalendarApp/GoogleCalendarService/GoogleCalendarService.csproj
+++ b/CalendarApp/GoogleCalendarService/GoogleCalendarService.csproj
@@ -78,6 +78,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http.Extensions, Version=2.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -101,9 +102,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\EventGroupByExtension.cs" />
+    <Compile Include="Extensions\EventIntersectionExtensions.cs" />
+    <Compile Include="Helpers\AppSettingsHelper.cs" />
+    <Compile Include="IBookingService.cs" />
+    <Compile Include="Manager\EventManager.cs" />
     <Compile Include="Initializers\CustomCredentialInitializer.cs" />
     <Compile Include="Initializers\CustomInitializer.cs" />
     <Compile Include="BookingService.cs" />
+    <Compile Include="Manager\EventsListBuilder.cs" />
+    <Compile Include="Manager\FrequencyEnumaretion.cs" />
+    <Compile Include="Manager\FrequencyType.cs" />
+    <Compile Include="Manager\IEventManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
