--- a/CalendarApp/GoogleCalendarService/app.config
+++ b/CalendarApp/GoogleCalendarService/app.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="MaxResults" value="2500"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
